Swap Navigation Buttons Added

--- a/Personal-Budget-Final/src/app/footer/footer.component.html
+++ b/Personal-Budget-Final/src/app/footer/footer.component.html
@@ -1,4 +1,4 @@
-<footer class="bottom" id="footer">
+<footer id="footer">
   <div class="center">
       All rights reserved &copy; Fabio Nolasco
   </div>
