--- a/Personal-Budget-Final/src/app/menu/menu.component.html
+++ b/Personal-Budget-Final/src/app/menu/menu.component.html
@@ -1,8 +1,15 @@
 <nav class="menu">
   <ul>
       <!--<li><a [routerLink]="['/']">Home</a></li>-->
-      <li><a [routerLink]="['/welcome']">Welcome</a></li>
-      <li><a [routerLink]="['/signup']">Sign Up</a></li>
-      <li><a [routerLink]="['/login']">Login</a></li>
+      <div *ngIf=getAuthenticatedUser()>
+        <li><a [routerLink]="['/welcome']">Welcome</a></li>
+        <li><a [routerLink]="['/homepage']">Home</a></li>
+        <li><a [routerLink]="['/login']" (click)="logout()">Logout</a></li>
+      </div>
+      <div *ngIf=!getAuthenticatedUser()>
+        <li><a [routerLink]="['/welcome']">Welcome</a></li>
+        <li><a [routerLink]="['/signup']">Sign Up</a></li>
+        <li><a [routerLink]="['/login']">Login</a></li>
+      </div>
   </ul>
 </nav>
