--- a/Personal-Budget-Final/src/app/homepage/homepage.component.scss
+++ b/Personal-Budget-Final/src/app/homepage/homepage.component.scss
@@ -84,18 +84,6 @@ h1 {
   .form-container .btn:hover, .open-button:hover {
     opacity: 1;
   }
-
-
-
-
-
-
-
-
-
-
-
-
   .chart-box {
     display: inline-block;
     width: 100%;
@@ -108,7 +96,11 @@ h1 {
     float: left;
     width: 50%;
     padding: 10px;
-    height: 600px;
+    height: 100%;
+  }
+
+  .clear {
+    clear : both;
   }
 
   .main .chart-box {
@@ -127,5 +119,4 @@ h1 {
     margin-top: 15px;
     opacity: 0.8;
   }
-
 
