--- a/Personal-Budget-Final/src/app/login/login.component.html
+++ b/Personal-Budget-Final/src/app/login/login.component.html
@@ -9,6 +9,7 @@
     <input type="password" placeholder="Enter Password" id= "password" name="psw" formControlName="password" required>
     <br/>
 
+    <div *ngIf="hasError"><p>invalid username/password</p></div>
     <button type="submit" class="login">Login</button>
   </div>
 
