Added Third Visual

--- a/Personal-Budget-Final/src/app/homepage/homepage.component.html
+++ b/Personal-Budget-Final/src/app/homepage/homepage.component.html
@@ -27,6 +27,7 @@
 
       <button class="btn" (click)="openPie()">Pie Chart</button><br/>
       <button class="btn" (click)="openBar()">Bar Graph</button><br/>
+      <button class="btn" (click)="openPolarArea()">Mix Graph</button><br/>
 
     </div>
 
